# gtkshutdown

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.zed/: settings.json
nix/: default.nix
nix/dev/: devshell.nix  pre-commit.nix
nix/dev/vms/: common.nix  hyprland-lua.nix  hyprland.nix  sway.nix
src/: app.rs  app_state.rs  client.rs  main.rs  ui.rs
src/assets/: style.css
src/client_killer/: hyprland.rs  mod.rs
