[package]
name = "gtkshutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
flexi_logger = "0.31.9"
gtk4 = "0.10.3"
# hyprland = "0.4.0-beta.3"
# Use master branch, which allows me to access pid of layers
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
log = "0.4.30"
nix = { version = "0.31.3", features = ["signal"] }
